* Implemented enhacement request:   - To be able to setup the disclaimer types outside of the code     https://github.com/jmeile/agreedisclaimer/issues/10 * The disclaimer types are now stored as a json string * The current selected disclaimer type is no longer stored as a string. It is an   integer index reffering to the json disclaimer types * The menu entry will now be rendered with a shorter string. When howering over   it the longer string will be shown * The placeholders for the disclaimer texts: %s1 and %s2 were changed by @s1 and   @s2 because the 'p', 'print_unescaped', and 't' functions from OwnCloud have   problem with the '%' character * The function multiple_replace from the JavaScript Utils class was renamed to   multipleReplace * A new function: multipleSearch was added to the JavaScript Utils class. This   function searchs several the keywords in a string and return all their   positions

--- a/css/admin.css
+++ b/css/admin.css
@@ -49,3 +49,69 @@
     text-decoration: underline;
 }
 
+/**
+ * Table for rendering the disclaimer types
+ */
+.agreedisclaimer_types_table {
+    width:100%;
+}
+
+/**
+ * Table borders
+ */
+.agreedisclaimer_types_table,
+.agreedisclaimer_types_table th,
+.agreedisclaimer_types_table td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+/**
+ * Cell properties
+ */
+.agreedisclaimer_types_table td {
+    padding: 5px;
+    text-align: left;
+}
+
+/**
+ * Layout for the even rows
+ */
+.agreedisclaimer_types_table tr:nth-child(even) {
+    background-color: #E8E8E8;
+}
+
+/**
+ * Layout for the odd rows
+ */
+.agreedisclaimer_types_table tr:nth-child(odd) {
+   background-color:#fff;
+}
+
+/**
+ * Layout for the heading 
+ */
+.agreedisclaimer_types_table th {
+    padding: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: center;
+    background-color: #aaa;
+    color: white;
+    font-weight: bold;
+}
+
+/**
+ * Delete icon link
+ */
+#agreedisclaimer a.icon-delete {
+    display: block;
+}
+
+/**
+ * Row to add new disclaimers
+ */
+tr.agreedisclaimer_add_row td {
+    border: 0px;
+    background-color: #fff;
+}
